app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 255, 255, 255;
  --background-start-rgb: 6, 78, 59;
  --background-end-rgb: 91, 33, 182;
}

body {
  color: rgb(var(--foreground-rgb));
  overflow-x: hidden;
  background: linear-gradient(
      to bottom right,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
  min-height: 100vh;
}

* {
  box-sizing: border-box;
  /* border: 0.1px solid red; */
}

h2 {
  font-size: 1.5rem;
  font-weight: 600;
  margin-bottom: 1rem;
}

